--- a/app/res/layout/activity_login.xml
+++ b/app/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="top|center"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_logo" />
 
     <LinearLayout
         android:id="@+id/llInputFields"
