--- a/app/res/layout/activity_main.xml
+++ b/app/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:src="@drawable/splash"
+        android:src="@drawable/ic_logo"
         />
     <ProgressBar
         android:id="@+id/login_waiter"
