--- a/app/res/menu/activity_edit_normal.xml
+++ b/app/res/menu/activity_edit_normal.xml
@@ -1,5 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="@string/menu_share" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true">
+    
+        <item android:id="@+id/menu_view_meta" android:title="@string/menu_view_meta" android:icon="@android:drawable/ic_menu_info_details" android:orderInCategory="99" android:showAsAction="always" android:enabled="true"/>
+    
+    <item android:title="@string/menu_share" android:orderInCategory="100" android:icon="@android:drawable/ic_menu_share" android:showAsAction="always" android:enabled="true">
     
         	<menu>
         	    <item android:id="@+id/menu_share" android:title="@string/menu_share_media" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true"/>
@@ -7,5 +10,5 @@
         	</menu>
     </item>
     
-    <item android:id="@+id/menu_edit" android:title="@string/menu_edit" android:orderInCategory="101" android:showAsAction="always" android:enabled="true"/>
+    <item android:id="@+id/menu_edit" android:title="@string/menu_edit" android:icon="@android:drawable/ic_menu_edit" android:orderInCategory="101" android:showAsAction="always" android:enabled="true"/>
 </menu>
