--- a/app/res/layout/adapter_home_photo.xml
+++ b/app/res/layout/adapter_home_photo.xml
@@ -1,5 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/org.witness.informacam.app"
+    xmlns:app="http://schemas.android.com/apk/res/org.ibanet.informacam"
     android:id="@+id/flPhotoRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
