--- a/app/res/layout/fragment_wizard_select_language.xml
+++ b/app/res/layout/fragment_wizard_select_language.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/org.witness.informacam.app"
+    xmlns:app="http://schemas.android.com/apk/res/org.ibanet.informacam"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue_dark"
