brand modifications for eyeWitness IBA release

--- a/app/res/layout/fragment_wizard_select_language.xml
+++ b/app/res/layout/fragment_wizard_select_language.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/org.witness.informacam.app"
+    xmlns:app="http://schemas.android.com/apk/res/org.ibanet.informacam"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue_dark"
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_logo" />
 
     <org.witness.informacam.app.views.CustomFontTextView
         android:id="@+id/textView1"
