Show wait spinner for edit activity

--- a/app/res/layout/activity_editor.xml
+++ b/app/res/layout/activity_editor.xml
@@ -54,4 +54,11 @@
         android:layout_margin="0dip"
         android:padding="0dip" />
 
+    <ProgressBar
+        android:id="@+id/waitLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center" />
+
 </FrameLayout>
