--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -169,6 +169,7 @@
         <item name="android:background">@drawable/blue_rounded_button_selector</item>
         <item name="android:textColor">@android:color/white</item>
 	    <item name="android:textSize">15sp</item>
+	    <item name="android:minHeight">48dip</item>
     </style>
     
 	<style name="Theme.Transparent" parent="android:Theme">
