--- a/app/res/menu/activity_edit_normal.xml
+++ b/app/res/menu/activity_edit_normal.xml
@@ -7,6 +7,7 @@
         	<menu>
         	    <item android:id="@+id/menu_share" android:title="@string/menu_share_media" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true"/>
         	    <item android:id="@+id/menu_share_meta" android:title="@string/menu_share_meta" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true"/>
+       	        <item android:id="@+id/menu_share_hash" android:title="@string/menu_share_hash" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true"/>
         	</menu>
     </item>
     
