support the "external camera" proof mode preference also support the new streamlined DCIMObs import mechanism

--- a/app/res/xml/preferences.xml
+++ b/app/res/xml/preferences.xml
@@ -33,4 +33,10 @@
             android:defaultValue="false"
             android:key="prefGpsEnableHires"
         	/>
+        
+         <CheckBoxPreference
+            android:title="Use External Camera Mode"
+            android:defaultValue="false"
+            android:key="prefExternalCamera"
+        	/>
 </PreferenceScreen>
