--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -112,11 +112,13 @@
     <style name="EditorTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/EditorActionBar</item>
     	<item name="android:actionModeBackground">@drawable/actionbar_actionmode_background</item>
+        <item name="android:backgroundSplit">@drawable/actionbar_actionmode_background</item>
         </style>
     
     <style name="EditorActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
     	<item name="android:background">@drawable/actionbar_background</item>
     	<item name="android:titleTextStyle">@style/EditorActionBarTitle</item>
+        <item name="android:backgroundSplit">@drawable/actionbar_background</item>
     </style>
 
 	<style name="EditorActionBarTitle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
