--- a/app/res/values/cacheword.xml
+++ b/app/res/values/cacheword.xml
@@ -2,15 +2,64 @@
 <resources>
 
     <!-- Notification Settings -->
-    <string name="cacheword_notification_cached_title">InformaCam Unlocked</string>
-    <string name="cacheword_notification_cached">Passphrase stored in memory</string>
-    <string name="cacheword_notification_cached_message">Passphrase stored in memory</string>
-    <bool name="cacheword_use_notification_default">false</bool>
+    <string name="cacheword_notification_cached_title">Secrets Unlocked</string>
+    <string name="cacheword_notification_cached">Passphrase stored in the clear. Tap to lock.</string>
+    <string name="cacheword_notification_cached_message">Passphrase stored in the clear. Tap to lock.</string>
+    <bool name="cacheword_use_notification_default">true</bool>
 
     <!-- To configure the notification icon create a drawable resource named:
            cacheword_notification_icon
     -->
 
-  
+    <!--
+          Timeout: How long to wait before automatically locking and wiping the secrets
+                   after all your activities are no longer visible
+                   This is the default setting, and can be changed at runtime via a preference
+                   A value of 0 represents instant timeout
+                   A value < 0  represents no timeout (or infinite timeout)
+    -->
+    <integer name="cacheword_timeout_seconds_default">-1</integer>
+
+    <!--
+    In August 2013 a severe bug was found in Android's SecureRandom implementation. This affected all
+    versions of Android up to and including 4.3.
+
+    Cacheword will apply the suggested fix for this, unless you tell it not to.
+
+    The only reason to disable this is if (1) You already apply the fixes in your application or
+    (2) you are only running on Android > 4.3.
+
+    It is suggested that you apply the fixes yourself in onCreate of your Application class, to ensure
+    the PRNG is fixed as soon as possible. If you do this, change this value to false.
+
+     -->
+    <bool name="cacheword_apply_android_securerandom_fixes">true</bool>
+
+    <!--
+          Vibrate: Whether to vibrate phone when password is cached or not.
+                   This is the default setting, and can be changed at runtime via a preference
+                   Don't forget to add the vibrate permission!
+                    <uses-permission android:name="android.permission.VIBRATE" />
+    -->
+    <bool name="cacheword_vibrate_default">false</bool>
+
+    <!--
+        Iteration Count:  the minimum iteration count value used in the PBKDF2 key hashing step.
+
+                          The larger this value the more secure the user's password will be against
+                          offline cracking attempts, but the longer the unlocking process will take.
+                          The ideal number is one which results in approximately 1 sec of unlock time
+                          on the device, however this changes from device to device due to varying hardware.
+
+        Auto Calibrate:   Cacheword will attempt to calculate the best iteration count for the device at
+                          runtime using an adaptive algorithim that takes less than a second.
+
+                          If auto_calibrate is set to false, then Cacheword will use the minimum value in all cases.
+
+                          If auto_calibrate is set to true and the detected iteration count (from an existing
+                          installation) is lower than the new minimum, a new calibration will be performed.
+     -->
+    <integer name="cacheword_pbkdf2_minimum_iteration_count">1000</integer>
+    <bool name="cacheword_pbkdf2_auto_calibrate">true</bool>
 </resources>
 
