--- a/app/res/xml/preferences.xml
+++ b/app/res/xml/preferences.xml
@@ -35,7 +35,7 @@
         	/>
         
          <CheckBoxPreference
-            android:title="Use External Camera Mode"
+            android:title="@string/prefs_external_camera"
             android:defaultValue="false"
             android:key="prefExternalCamera"
         	/>
