--- a/app/res/values/cacheword.xml
+++ b/app/res/values/cacheword.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <!-- Notification Settings -->
-    <string name="cacheword_notification_cached_title">Secrets Unlocked</string>
-    <string name="cacheword_notification_cached">Passphrase stored in the clear. Tap to lock.</string>
-    <string name="cacheword_notification_cached_message">Passphrase stored in the clear. Tap to lock.</string>
+    <string name="cacheword_notification_cached_title">CameraV Unlocked</string>
+    <string name="cacheword_notification_cached">Tap to lock.</string>
+    <string name="cacheword_notification_cached_message">Tap to lock.</string>
     <bool name="cacheword_use_notification_default">true</bool>
 
     <!-- To configure the notification icon create a drawable resource named:
