fixes for batch mode and default to external camera

--- a/app/res/xml/preferences.xml
+++ b/app/res/xml/preferences.xml
@@ -36,11 +36,11 @@
             android:key="prefGpsEnableHires"
         	/>
         
-        <!-- 
+        
          <CheckBoxPreference
             android:title="@string/prefs_external_camera"
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="prefExternalCamera"
         	/>
-        	 -->
+        	 
 </PreferenceScreen>
