UI tuning, cleanup for video and image display

--- a/app/res/layout/activity_login.xml
+++ b/app/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingLeft="0dip"
     android:paddingRight="0dip"
-    android:paddingTop="60dip"
+    android:paddingBottom="0dip"
     android:descendantFocusability="beforeDescendants"
     android:focusable="true"
     android:focusableInTouchMode="true"
@@ -25,9 +25,8 @@
         android:id="@+id/llInputFields"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_margin="30dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/wizard_rounded_background"
         android:orientation="vertical"
         android:gravity="center"
