--- a/app/res/layout/activity_editor.xml
+++ b/app/res/layout/activity_editor.xml
@@ -7,7 +7,9 @@
             android:id="@+id/root_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:background="@drawable/black"
+             >
 
             <FrameLayout
                 android:id="@+id/media_holder"
