--- a/app/res/layout/editors_video.xml
+++ b/app/res/layout/editors_video.xml
@@ -9,17 +9,18 @@
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:gravity="center_vertical"
+        android:layout_centerInParent="true"
+         />
 
     <LinearLayout
         android:id="@+id/video_controls_holder"
         android:layout_width="match_parent"
         android:layout_height="40dip"
-        android:layout_alignBottom="@+id/video_view"
         android:layout_gravity="bottom"
         android:layout_marginBottom="20dip"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/trans_black"
         android:orientation="horizontal"
         android:weightSum="1" >
@@ -59,5 +60,4 @@
                 android:background="#00000000" />
         </RelativeLayout>
     </LinearLayout>
-
-</RelativeLayout>
+    </RelativeLayout>
