--- a/app/res/layout/media_history_group_header_item.xml
+++ b/app/res/layout/media_history_group_header_item.xml
@@ -37,6 +37,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_margin="10dp"
+        android:visibility="gone"
         android:src="@drawable/ic_context_open" />
 
 </RelativeLayout>
