--- a/app/res/layout/editors_image.xml
+++ b/app/res/layout/editors_image.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
      >
-    <ImageView
+    <org.witness.informacam.app.views.PZSImageView
         android:id="@+id/media_holder_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
