--- a/app/res/layout/editors_image.xml
+++ b/app/res/layout/editors_image.xml
@@ -6,8 +6,8 @@
      >
     <org.witness.informacam.app.views.PZSImageView
         android:id="@+id/media_holder_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:scaleType="matrix" />
 </RelativeLayout>
