--- a/app/res/layout/fragment_editor_fullscreen_view.xml
+++ b/app/res/layout/fragment_editor_fullscreen_view.xml
@@ -2,8 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scroll_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/white" >
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
