--- a/app/res/xml/preferences.xml
+++ b/app/res/xml/preferences.xml
@@ -40,7 +40,7 @@
         
          <CheckBoxPreference
             android:title="@string/prefs_external_camera"
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="prefExternalCamera"
         	/>
         	 
