support export of encrypted media to unencrypted some apps need to have a local file:/// to work with, and some users want the ability to export to /sdcard for export

--- a/app/res/xml/preferences.xml
+++ b/app/res/xml/preferences.xml
@@ -43,5 +43,11 @@
             android:defaultValue="false"
             android:key="prefExternalCamera"
         	/>
+         
+          <CheckBoxPreference
+            android:title="@string/prefs_export_local"
+            android:defaultValue="false"
+            android:key="prefExportLocal"
+        	/>
         	 
 </PreferenceScreen>
