--- a/app/res/layout/fragment_forms_fullscreen.xml
+++ b/app/res/layout/fragment_forms_fullscreen.xml
@@ -2,7 +2,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/details_form_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+	android:background="#ffffff"
+     >
 
     <LinearLayout
         android:id="@+id/details_form_list"
