--- a/app/res/menu/activity_edit_normal.xml
+++ b/app/res/menu/activity_edit_normal.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     
-        <item android:id="@+id/menu_view_meta" android:title="@string/menu_view_meta" android:icon="@android:drawable/ic_menu_info_details" android:orderInCategory="99" android:showAsAction="always" android:enabled="true"/>
+    <item android:id="@+id/menu_view_meta" android:title="@string/menu_view_meta" android:icon="@android:drawable/ic_menu_info_details" android:orderInCategory="99" android:showAsAction="always" android:enabled="true"/>
+    <item android:id="@+id/menu_view_charts" android:title="@string/menu_view_charts" android:icon="@drawable/ic_action_charts" android:orderInCategory="99" android:showAsAction="always" android:enabled="true"/>
     
     <item android:title="@string/menu_share" android:orderInCategory="100" android:icon="@android:drawable/ic_menu_share" android:showAsAction="always" android:enabled="true">
     
