--- a/app/res/layout/activity_metadata.xml
+++ b/app/res/layout/activity_metadata.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
- <TextView 
+<EditText 
+     xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/textarea_metadata"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
 		android:textIsSelectable="true"
+		android:scrollbars="vertical"
+		android:editable="false"
+		android:inputType="none"		
         />
-</FrameLayout>
