add alternative/sleath icon feature

--- a/app/res/xml/preferences.xml
+++ b/app/res/xml/preferences.xml
@@ -55,5 +55,15 @@
             android:defaultValue="false"
             android:key="prefRunForeground"
         	/>
+          
+          <CheckBoxPreference
+            android:title="@string/prefs_stealth_icon"
+            android:defaultValue="false"
+            android:key="prefStealthIcon"
+        	/>
+          
+          
+          
+          
         	 
 </PreferenceScreen>
