support stealth/alt icon on login screen

--- a/app/res/layout/activity_login.xml
+++ b/app/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
     >
 
     <ImageView
+        android:id="@+id/loginLogo"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center"
